[AI Fix] (a11y ADA compliance): darken shared gray text color to satisfy contrast threshold

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -16,7 +16,7 @@ $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2474dc !default;
 
-$grey-color:       #757575 !default;
+$grey-color:       #6f6f6f !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
